--- a/pom.xml
+++ b/pom.xml
@@ -28,12 +28,9 @@
         <druid-spring-boot.version>1.2.1</druid-spring-boot.version>
         <knife4j.version>3.0.2</knife4j.version>
     </properties>
+    <dependencyManagement>
+
     <dependencies>
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.5.6</version>
-        </dependency>
 
         <dependency>
             <groupId>com.mysql</groupId>
@@ -53,6 +50,7 @@
             <version>3.5.6</version>
         </dependency>
     </dependencies>
+    </dependencyManagement>
 
     <build>
         <plugins>
