--- a/server/pom.xml
+++ b/server/pom.xml
@@ -5,9 +5,9 @@
     <parent>
         <groupId>com.yang</groupId>
         <artifactId>logistics</artifactId>
-        <version>0.0.1-SNAPSHOT</version> <!-- lookup parent from repository -->
+        <version>0.0.1-SNAPSHOT</version>
+        <!-- lookup parent from repository -->
     </parent>
-    <groupId>com.yang</groupId>
     <artifactId>server</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>server</name>
@@ -18,15 +18,15 @@
     </properties>
     <dependencies>
         <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter</artifactId>
-            <version>3.5.6</version>
-        </dependency>
-
-        <dependency>
             <groupId>com.yang</groupId>
             <artifactId>common</artifactId>
             <version>0.0.1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-web</artifactId>
+            <version>3.5.6</version>
         </dependency>
 
         <dependency>
@@ -35,18 +35,8 @@
             <version>0.0.1-SNAPSHOT</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-test</artifactId>
-            <scope>test</scope>
-            <version>3.5.6</version>
-        </dependency>
 
-        <dependency>
-            <groupId>org.springframework.boot</groupId>
-            <artifactId>spring-boot-starter-web</artifactId>
-            <version>3.5.6</version>
-        </dependency>
+
 
         <dependency>
             <groupId>mysql</groupId>
