--- a/server/pom.xml
+++ b/server/pom.xml
@@ -96,6 +96,12 @@
             <artifactId>knife4j-spring-boot-starter</artifactId>
             <version>${knife4j.version}</version>
         </dependency>
+
+        <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-validation</artifactId>
+            <version>3.5.6</version>
+        </dependency>
     </dependencies>
 
     <build>
